# Detector

./: config-host.h  config-host.mak
detector/: Makefile  detector.c  detector.d  detector.h  thread_info.cpp  thread_info.hpp  trace.c  trace.h
detector/gadget/: Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.ac  gadget.cpp
i386-softmmu/: Makefile
shared/: hookapi.d  procmod.d  read_linux.d  reduce_taint.d
